<?xml version="1.0" encoding="utf-8"?>
<!--    24213E-->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="?colorPrimary"
    app:cardElevation="5dp"
    app:cardCornerRadius="0dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/moviePosterImgView"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_aquaman"
            android:tint="#2F000000"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/moviePosterImgView"
            app:layout_constraintTop_toTopOf="@+id/moviePosterImgView">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/movieTitle_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_title"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <LinearLayout
                    android:id="@+id/txtView_movieField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration_txt"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="15sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/releasedate_txt"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="15sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genre_txt"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/txtView_movieField"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/duration_txtView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_duration"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/year_txtView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_releaseDate"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/genre_txtView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummyGenre_txtView"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>
            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_txt"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/rating_txtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/dummy_rating"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/materialTextView"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:clickable="true"
                android:paddingStart="0dp"
                android:paddingEnd="8dp"
                android:src="@drawable/ic_arrow_white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>