<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".DetailMovieActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_detail_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            android:id="@+id/collaps_toolbar_tv"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <!--            app:expandedTitleTextAppearance="@style/TransparentText"-->

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:id="@+id/poster_detail_tv"
                android:src="@drawable/poster_aquaman"
                android:foreground="@drawable/gradient_bg"
                android:contentDescription="@string/poster_detail_contentDescription"
                app:layout_collapseMode="parallax"
                android:scaleType="centerCrop"/>

            <include
                layout="@layout/toolbar_layout"
                android:id="@+id/toolbar_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Dark"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_anchor="@+id/app_bar_detail_tv"
        app:layout_anchorGravity="bottom|center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrainLayout_detailTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="8dp">

            <LinearLayout
                android:id="@+id/linearLayoutGenre_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/rating_detail_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/dummy_rating"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/linearLayoutGenre_detail_tv"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutGenre_detail_tv" />

            <View
                android:id="@+id/viewSeparator"
                android:layout_width="2dp"
                android:layout_height="18dp"
                android:background="@color/white"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/rating_detail_tv"
                app:layout_constraintStart_toEndOf="@+id/rating_detail_tv"
                app:layout_constraintTop_toTopOf="@+id/rating_detail_tv" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/materialTextView4"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/current_season_label"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@+id/rating_detail_tv"
                app:layout_constraintTop_toBottomOf="@+id/rating_detail_tv"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentSeasonDetail_tv"
                tools:text="Season 8"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/materialTextView4"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView4"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentSeasonYearEpisodesDetail_tv"
                tools:text="2019 | Episode 10"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/currentSeasonDetail_tv"
                app:layout_constraintTop_toBottomOf="@+id/currentSeasonDetail_tv"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/duration_vectorImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/ic_timer_white_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/viewSeparator"
                app:layout_constraintStart_toEndOf="@+id/viewSeparator"
                app:layout_constraintTop_toTopOf="@+id/viewSeparator" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/runtime_detail_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_toEndOf="@+id/duration_vectorImage"
                android:text="@string/dummy_duration"
                app:layout_constraintBottom_toBottomOf="@+id/duration_vectorImage"
                app:layout_constraintStart_toStartOf="@id/duration_vectorImage"
                app:layout_constraintTop_toTopOf="@+id/duration_vectorImage" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/runtime_detail_tv"
                app:layout_constraintTop_toTopOf="@+id/runtime_detail_tv">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/network_detail_tv"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:background="#ccfefefe"
                    android:padding="8dp"
                    tools:src="@drawable/network_dc" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/synopsis_txt"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/currentSeasonYearEpisodesDetail_tv"
                app:layout_constraintTop_toBottomOf="@+id/currentSeasonYearEpisodesDetail_tv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/synopsis_detail_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dummy_description"
                app:layout_constraintEnd_toEndOf="@+id/cardview_network"
                app:layout_constraintStart_toStartOf="@+id/materialTextView"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/releasedate_txt"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/synopsis_detail_tv"
                app:layout_constraintTop_toBottomOf="@+id/synopsis_detail_tv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/year_detail_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_releaseDate"
                app:layout_constraintStart_toStartOf="@+id/materialTextView2"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextViewCreator_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creator_txtView"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/year_detail_tv"
                app:layout_constraintEnd_toEndOf="@+id/cardview_network"
                app:layout_constraintTop_toTopOf="@+id/materialTextView2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/creator_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/materialTextViewCreator_label"
                app:layout_constraintTop_toBottomOf="@+id/materialTextViewCreator_label"
                tools:text="Omar Ibn Omar" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/cast_txtView"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="@+id/year_detail_tv"
                app:layout_constraintTop_toBottomOf="@+id/year_detail_tv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/castDetail_tv_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>